src/test/deca/codegen/valid/fonction/void-fonction-param.deca
// Description:
//    Programme valide ayant pour but de tester les fonctions.
//
// Resultats:
//    2

class MaClasse{
    void test(int a){
        print(a);
    }
}

{
    new MaClasse().test(2);
}