src/test/deca/codegen/invalid/compile/modulo-zero.deca
// Description:
//    Programme invalide ayant pour but de tester modulo zero.
//
// Resultats:
//    Erreur ligne 8

{
    int c = 2%0;
}